--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                 <div class="project-item group relative bg-white dark:bg-dark rounded-xl overflow-hidden shadow-md hover:shadow-xl transition-all duration-300 animate-slide-up scroll-scale"
                     data-category="web">
                     <div class="relative overflow-hidden">
-                        <img src="dhruba.jpg" alt="Project 1"
+                        <img src="SangamK.C.jpg" alt="Project 1"
                             class="w-full h-56 object-cover group-hover:scale-110 transition-all duration-500">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end">
@@ -699,7 +699,7 @@
                 <div class="project-item group relative bg-white dark:bg-dark rounded-xl overflow-hidden shadow-md hover:shadow-xl transition-all duration-300 animate-slide-up scroll-scale"
                     data-category="web">
                     <div class="relative overflow-hidden">
-                        <img src="dhruba.jpg" alt="Project 2"
+                        <img src="SangamK.C.jpg" alt="Project 2"
                             class="w-full h-56 object-cover group-hover:scale-110 transition-all duration-500">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end">
@@ -736,7 +736,7 @@
                 <div class="project-item group relative bg-white dark:bg-dark rounded-xl overflow-hidden shadow-md hover:shadow-xl transition-all duration-300 animate-slide-up scroll-scale"
                     data-category="mobile">
                     <div class="relative overflow-hidden">
-                        <img src="dhruba.jpg" alt="Project 3"
+                        <img src="SangamK.C.jpg" alt="Project 3"
                             class="w-full h-56 object-cover group-hover:scale-110 transition-all duration-500">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end">
@@ -773,7 +773,7 @@
                 <div class="project-item group relative bg-white dark:bg-dark rounded-xl overflow-hidden shadow-md hover:shadow-xl transition-all duration-300 animate-slide-up scroll-scale"
                     data-category="design">
                     <div class="relative overflow-hidden">
-                        <img src="dhruba.jpg" alt="Project 4"
+                        <img src="SangamK.C.jpg" alt="Project 4"
                             class="w-full h-56 object-cover group-hover:scale-110 transition-all duration-500">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end">
@@ -810,7 +810,7 @@
                 <div class="project-item group relative bg-white dark:bg-dark rounded-xl overflow-hidden shadow-md hover:shadow-xl transition-all duration-300 animate-slide-up scroll-scale"
                     data-category="web">
                     <div class="relative overflow-hidden">
-                        <img src="dhruba.jpg" alt="Project 5"
+                        <img src="SangamK.C.jpg" alt="Project 5"
                             class="w-full h-56 object-cover group-hover:scale-110 transition-all duration-500">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end">
@@ -847,7 +847,7 @@
                 <div class="project-item group relative bg-white dark:bg-dark rounded-xl overflow-hidden shadow-md hover:shadow-xl transition-all duration-300 animate-slide-up scroll-scale"
                     data-category="mobile">
                     <div class="relative overflow-hidden">
-                        <img src="dhruba.jpg" alt="Project 6"
+                        <img src="SangamK.C.jpg" alt="Project 6"
                             class="w-full h-56 object-cover group-hover:scale-110 transition-all duration-500">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-end">
@@ -946,7 +946,7 @@
 
                     <!-- Client info -->
                     <div class="flex items-center">
-                        <img src="dhruba.jpg" alt="Client" class="w-12 h-12 rounded-full object-cover mr-4">
+                        <img src="SangamK.C.jpg" alt="Client" class="w-12 h-12 rounded-full object-cover mr-4">
                         <div>
                             <h4 class="font-semibold dark:text-gray-200">Sarah Johnson</h4>
                             <p class="text-gray-500 dark:text-gray-400 text-sm">CEO, TechStart</p>
@@ -982,7 +982,7 @@
 
                     <!-- Client info -->
                     <div class="flex items-center">
-                        <img src="dhruba.jpg" alt="Client" class="w-16 h-12 rounded-full object-cover mr-4">
+                        <img src="SangamK.C.jpg" alt="Client" class="w-16 h-12 rounded-full object-cover mr-4">
                         <div>
                             <h4 class="font-semibold dark:text-gray-200">Michael Roberts</h4>
                             <p class="text-gray-500 dark:text-gray-400 text-sm">Marketing Director, InnovateCorp</p>
@@ -1016,7 +1016,7 @@
 
                     <!-- Client info -->
                     <div class="flex items-center">
-                        <img src="dhruba.jpg" alt="Client" class="w-16 h-12 rounded-full object-cover mr-4">
+                        <img src="SangamK.C.jpg" alt="Client" class="w-16 h-12 rounded-full object-cover mr-4">
                         <div>
                             <h4 class="font-semibold dark:text-gray-200">Emily Chen</h4>
                             <p class="text-gray-500 dark:text-gray-400 text-sm">Product Manager, TechSolutions</p>
