--- a/index.html
+++ b/index.html
@@ -219,14 +219,30 @@
                         <span class="absolute -bottom-1 left-0 w-full h-1 bg-primary/30 rounded"></span>
                     </h3>
 
-                    <p class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed">Hello! I'm Sangam, a passionate
-                        frontend developer with 3+ years of experience creating responsive and user-friendly websites. I
-                        transform complex problems into elegant, intuitive interfaces that users love.</p>
+                    <p class="text-gray-600 dark:text-gray-300 mb-6 leading-relaxed">Hello! I'm Sangam — a passionate
+                        Frontend Developer with 3+ years of experience crafting responsive, user-friendly, and visually
+                        appealing websites. I specialize in transforming complex problems into elegant, intuitive
+                        interfaces that users love.
 
-                    <p class="text-gray-600 dark:text-gray-300 mb-8 leading-relaxed">My journey in web development began
+                        My journey in web development began during college, where I discovered my passion for building
+                        seamless digital experiences. Since then, I’ve collaborated with startups and established
+                        companies, bringing their visions to life with clean, maintainable code and creative design
+                        solutions.
+
+                        Beyond frontend development, I hold expertise in Networking as a certified CCNA professional —
+                        skilled in configuring, managing, and troubleshooting networks to ensure secure, efficient
+                        connectivity. This technical versatility allows me to bridge the gap between design,
+                        development, and infrastructure.
+
+                        I also bring value through Digital Marketing, leveraging SEO, social media strategies, and
+                        analytics to boost brand visibility and drive engagement. By combining my design skills,
+                        technical networking knowledge, and marketing mindset, I deliver end-to-end digital solutions
+                        that are both functional and impactful.</p>
+
+                    <!-- <p class="text-gray-600 dark:text-gray-300 mb-8 leading-relaxed">My journey in web development began
                         during college, where I discovered my passion for creating digital experiences. Since then, I've
                         collaborated with startups and established companies alike, bringing their visions to life with
-                        clean code and beautiful designs.</p>
+                        clean code and beautiful designs.</p> -->
 
                     <!-- Personal details with improved styling -->
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
